; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_vf_gradfun.c_ff_gradfun_filter_line_c.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_vf_gradfun.c_ff_gradfun_filter_line_c.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ff_gradfun_filter_line_c(i32* %0, i32* %1, i32* %2, i32 %3, i32 %4, i32* %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32* %5, i32** %12, align 8
  store i32 0, i32* %13, align 4
  br label %17

17:                                               ; preds = %64, %6
  %18 = load i32, i32* %13, align 4
  %19 = load i32, i32* %10, align 4
  %20 = icmp slt i32 %18, %19
  br i1 %20, label %21, label %72

21:                                               ; preds = %17
  %22 = load i32*, i32** %8, align 8
  %23 = load i32, i32* %13, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds i32, i32* %22, i64 %24
  %26 = load i32, i32* %25, align 4
  %27 = shl i32 %26, 7
  store i32 %27, i32* %14, align 4
  %28 = load i32*, i32** %9, align 8
  %29 = getelementptr inbounds i32, i32* %28, i64 0
  %30 = load i32, i32* %29, align 4
  %31 = load i32, i32* %14, align 4
  %32 = sub nsw i32 %30, %31
  store i32 %32, i32* %15, align 4
  %33 = load i32, i32* %15, align 4
  %34 = call i32 @abs(i32 %33) #3
  %35 = load i32, i32* %11, align 4
  %36 = mul nsw i32 %34, %35
  %37 = ashr i32 %36, 16
  store i32 %37, i32* %16, align 4
  %38 = load i32, i32* %16, align 4
  %39 = sub nsw i32 127, %38
  %40 = call i32 @FFMAX(i32 0, i32 %39)
  store i32 %40, i32* %16, align 4
  %41 = load i32, i32* %16, align 4
  %42 = load i32, i32* %16, align 4
  %43 = mul nsw i32 %41, %42
  %44 = load i32, i32* %15, align 4
  %45 = mul nsw i32 %43, %44
  %46 = ashr i32 %45, 14
  store i32 %46, i32* %16, align 4
  %47 = load i32, i32* %16, align 4
  %48 = load i32*, i32** %12, align 8
  %49 = load i32, i32* %13, align 4
  %50 = and i32 %49, 7
  %51 = sext i32 %50 to i64
  %52 = getelementptr inbounds i32, i32* %48, i64 %51
  %53 = load i32, i32* %52, align 4
  %54 = add nsw i32 %47, %53
  %55 = load i32, i32* %14, align 4
  %56 = add nsw i32 %55, %54
  store i32 %56, i32* %14, align 4
  %57 = load i32, i32* %14, align 4
  %58 = ashr i32 %57, 7
  %59 = call i32 @av_clip_uint8(i32 %58)
  %60 = load i32*, i32** %7, align 8
  %61 = load i32, i32* %13, align 4
  %62 = sext i32 %61 to i64
  %63 = getelementptr inbounds i32, i32* %60, i64 %62
  store i32 %59, i32* %63, align 4
  br label %64

64:                                               ; preds = %21
  %65 = load i32, i32* %13, align 4
  %66 = and i32 %65, 1
  %67 = load i32*, i32** %9, align 8
  %68 = sext i32 %66 to i64
  %69 = getelementptr inbounds i32, i32* %67, i64 %68
  store i32* %69, i32** %9, align 8
  %70 = load i32, i32* %13, align 4
  %71 = add nsw i32 %70, 1
  store i32 %71, i32* %13, align 4
  br label %17

72:                                               ; preds = %17
  ret void
}

; Function Attrs: nounwind readnone
declare dso_local i32 @abs(i32) #1

declare dso_local i32 @FFMAX(i32, i32) #2

declare dso_local i32 @av_clip_uint8(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
